--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="nav" id="and_menor">
       <div class="nav-container-content">
         <nav class="navbar">
-          <a href="https://dzareldeveloper.github.io/Website-Class/">Web Old</a>
+          <a href="webold.html">Web Old</a>
           <a href="About.html">About Us</a>
           <a href="Message.html">Memory</a>
           <a href="Spotify.html">Spotify</a>
